--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🥭 BATAILLE DE MANGUE 🥭</title>
+    <title>🍋 BATAILLE DE MANGO MANGO MANGO 🍋</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,8 +11,8 @@
     <div class="game-container">
         <!-- En-tête -->
         <header class="game-header">
-            <h1 class="game-title">🥭 BATAILLE DE MANGUE 🥭</h1>
-            <div class="subtitle">Jeu RPG Rétro</div>
+            <h1 class="game-title">🍋 MANGOS'S FIGHT 🍋</h1>
+            <div class="subtitle">RPG</div>
         </header>
 
         <!-- Écran de sélection de personnage -->
@@ -27,12 +27,12 @@
                     <div class="character-sprite">
                         <img src="https://user-gen-media-assets.s3.amazonaws.com/seedream_images/bcc2fdae-cf9c-499a-9967-9a0a5b117e0b.png" alt="Mangue Musclée" class="mango-image musclee-image">
                     </div>
-                    <h3>💪 MANGUE MUSCLÉE</h3>
+                    <h3>👎 MANGO MUSCLÉE</h3>
                     <p class="character-desc">Grosse, stupide, pathétique</p>
                     <div class="stats-preview">
                         <div class="stat">❤️ Santé: 70</div>
                         <div class="stat">⚡ Énergie: 50</div>
-                        <div class="stat">💪 Force: 85</div>
+                        <div class="stat">💪 Force: 75</div>
                         <div class="stat">✨ Charisme: 15</div>
                     </div>
                     <button class="btn btn--primary select-btn">CHOISIR!</button>
@@ -42,12 +42,12 @@
                     <div class="character-sprite">
                         <img src="https://user-gen-media-assets.s3.amazonaws.com/seedream_images/94e02c1b-5adc-432f-8007-4ea43a6987eb.png" alt="Mangue Ronde" class="mango-image ronde-image sparkle">
                     </div>
-                    <h3>🌟 MANGUE RONDE</h3>
+                    <h3>🌟 MANGO POUFFIE</h3>
                     <p class="character-desc">Mignonne, cool, championne!</p>
                     <div class="stats-preview">
-                        <div class="stat">❤️ Santé: 95</div>
-                        <div class="stat">⚡ Énergie: 90</div>
-                        <div class="stat">💪 Force: 60</div>
+                        <div class="stat">❤️ Santé: 100</div>
+                        <div class="stat">⚡ Énergie: 100</div>
+                        <div class="stat">💪 Force: 70</div>
                         <div class="stat">✨ Charisme: 100</div>
                     </div>
                     <button class="btn btn--primary select-btn">CHOISIR!</button>
@@ -68,7 +68,7 @@
 
                 <div class="vs-indicator" id="vs-battle-trigger">
                     <div class="vs-text">⚔️ VS ⚔️</div>
-                    <div class="battle-hint">CLIC POUR COMBAT!</div>
+                    <div class="battle-hint">CLIC POUR FIGHT!</div>
                 </div>
 
                 <div class="mango-container right">
